Building Feed Fetcher Designed new sub pages Implemented New Services for data fetching New Controllers & improvement of old ones
Signed-off-by: Adrian Iwaszkiewicz <adrian@adriani6.co.uk>

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "express": "*",
     "mongodb": "*",
-    "crypto": "*"
+    "crypto": "*",
+    "express-session" : "*",
+    "connect-mongodb-session" : "*"
   }
 }
